# Time-series-lab

./: .gitignore  README.md  pyproject.toml
notebooks/ch_2/: 01-lab.ipynb
notebooks/ch_3/: 01-visualization.ipynb
