[project]
name = "time-series-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "fastexcel>=0.15.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nb-black-formatter>=1.0.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
